recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:6: error: not found: type double
  var x = 100:double;
              ^