recursion.logo.lessons.recursion.logo.square.FourSquare.scala.code
override def run() {
  faireCarre();
}

def faireCarre(){
  var x = 100:double;
  avance(x);
}